Adiciona plotagem de fft filtrada

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
         <button type="submit">Analyze</button>
     </form>
     <div id="result"></div>
+    <img id="fft-plot" src="/fft-plot" alt="FFT Plot" style="display:none; margin-top: 20px;">
     <script src="/static/app.js"></script>
 </body>
 </html>
