Transforma o WebApp em PWA
ao transformar ele em PWA ele vira praticamente um aplicativo nativo.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="/static/assets/logo.png" alt="Logotipo" class="logo">
-        <img src="/static/assets/phonoIA_logo.png" alt="Logotipo" class="logo">
+        <img src="/static/assets/phonIA_logo.png" alt="Logotipo" class="logo">
     </header>
     <form id="subtitulo-form">
         <div id="subtitulo">Ferramenta para Detectar Patologias na Voz</div>
@@ -22,4 +22,5 @@
     <img id="fft-plot" src="/fft-plot" alt="FFT Plot" style="display:none; margin-top: 20px;">
     <script src="/static/app.js"></script>
 </body>
+<link rel="manifest" href="/static/assets/manifest.json">
 </html>
