--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!– # --- frontend/index.html --- –>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhonoIA - Análise de Voz</title>
+    <title>PhonIA</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
