Adiciona nome de usuário logado no sistema.
Salva no DB os dados do usuário na tabela USUARIO e também adiciona novos campos a tabela ANALISE.

Insere Logger em pontos estratégicos.

Arredonda valores de análise para 6 casas decimais.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
         <input type="file" id="audio-file" accept=".wav" required />
         <button type="submit">Analisar</button>
     </form>
-    <div id="result">Aguarde enquanto processamos o arquivo...</div>
+    <div id="result">...</div>
     <img id="fft-plot" src="/fft-plot" alt="FFT Plot" style="display:none; margin-top: 20px;">
     <script src="/static/app.js"></script>
 </body>
