Redireciona para página de instruções ao clicar em "Gravar áudio"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <img src="/static/assets/phonialogo.png" alt="Logotipo" class="logo">
     </header>
     <form id="subtitulo-form">
-        <div id="subtitulo">Ferramenta para Detectar Patologias na Voz</div>
+        <div id="subtitulo">Ferramenta para Auxiliar a Detectar Patologias na Voz</div>
     </form>
     <form id="upload-form">
         <input type="file" id="audio-file" accept=".wav" required />
